Refactor(fields): Change how validation is performed.