@@ -22,8 +22,11 @@
  */
 package com.synopsys.integration.alert.common.descriptor.config.field;
 
+import java.util.ArrayList;
+import java.util.Arrays;
 import java.util.Collection;
 import java.util.List;
+import java.util.stream.Collectors;
 
 import com.synopsys.integration.alert.common.descriptor.config.field.validators.ConfigValidationFunction;
 import com.synopsys.integration.alert.common.enumeration.FieldType;
@@ -31,62 +34,63 @@ import com.synopsys.integration.alert.common.rest.model.FieldModel;
 import com.synopsys.integration.alert.common.rest.model.FieldValueModel;
 
 public class CheckboxConfigField extends ConfigField {
-    public CheckboxConfigField(final String key, final String label, final String description, final boolean required, final String panel) {
+    public CheckboxConfigField(String key, String label, String description, boolean required, String panel) {
         super(key, label, description, FieldType.CHECKBOX_INPUT, required, false, panel);
     }
 
-    public CheckboxConfigField(final String key, final String label, final String description, final boolean required, final String panel, final ConfigValidationFunction validationFunction) {
-        super(key, label, description, FieldType.CHECKBOX_INPUT, required, false, panel, validationFunction);
+    public CheckboxConfigField(String key, String label, String description, boolean required, String panel, ConfigValidationFunction... validationFunctions) {
+        super(key, label, description, FieldType.CHECKBOX_INPUT, required, false, panel);
+        createValidators(validationFunctions);
     }
 
-    public CheckboxConfigField(final String key, final String label, final String description, final boolean required) {
+    public CheckboxConfigField(String key, String label, String description, boolean required) {
         super(key, label, description, FieldType.CHECKBOX_INPUT, required, false);
+        createValidators(null);
     }
 
-    public CheckboxConfigField(final String key, final String label, final String description, final boolean required, final ConfigValidationFunction validationFunction) {
-        super(key, label, description, FieldType.CHECKBOX_INPUT, required, false, validationFunction);
+    public CheckboxConfigField(String key, String label, String description, boolean required, ConfigValidationFunction... validationFunctions) {
+        super(key, label, description, FieldType.CHECKBOX_INPUT, required, false);
+        createValidators(validationFunctions);
     }
 
-    protected CheckboxConfigField(final String key, final String label, final String description, FieldType fieldType, final boolean required) {
+    protected CheckboxConfigField(String key, String label, String description, FieldType fieldType, boolean required) {
         super(key, label, description, fieldType, required, false);
     }
 
-    public static CheckboxConfigField create(final String key, final String label, final String description) {
+    public static CheckboxConfigField create(String key, String label, String description) {
         return new CheckboxConfigField(key, label, description, false);
     }
 
-    public static CheckboxConfigField create(final String key, final String label, final String description, final ConfigValidationFunction validationFunction) {
-        return new CheckboxConfigField(key, label, description, false, validationFunction);
+    public static CheckboxConfigField create(String key, String label, String description, ConfigValidationFunction... validationFunctions) {
+        return new CheckboxConfigField(key, label, description, false, validationFunctions);
     }
 
-    public static CheckboxConfigField createRequired(final String key, final String label, final String description) {
+    public static CheckboxConfigField createRequired(String key, String label, String description) {
         return new CheckboxConfigField(key, label, description, true);
     }
 
-    public static CheckboxConfigField createRequired(final String key, final String label, final String description, final ConfigValidationFunction validationFunction) {
-        return new CheckboxConfigField(key, label, description, true, validationFunction);
+    public static CheckboxConfigField createRequired(String key, String label, String description, ConfigValidationFunction... validationFunctions) {
+        return new CheckboxConfigField(key, label, description, true, validationFunctions);
     }
 
-    public static CheckboxConfigField createPanel(final String key, final String label, final String description, final String panel) {
+    public static CheckboxConfigField createPanel(String key, String label, String description, String panel) {
         return new CheckboxConfigField(key, label, description, false, panel);
     }
 
-    public static CheckboxConfigField createPanel(final String key, final String label, final String description, final String panel, final ConfigValidationFunction validationFunction) {
-        return new CheckboxConfigField(key, label, description, false, panel, validationFunction);
+    public static CheckboxConfigField createPanel(String key, String label, String description, String panel, ConfigValidationFunction... validationFunctions) {
+        return new CheckboxConfigField(key, label, description, false, panel, validationFunctions);
     }
 
-    @Override
-    public Collection<String> validate(final FieldValueModel fieldValueModel, final FieldModel fieldModel) {
-        final List<ConfigValidationFunction> validationFunctions;
-        if (null != getValidationFunction()) {
-            validationFunctions = List.of(this::validateValueIsBoolean, getValidationFunction());
-        } else {
-            validationFunctions = List.of(this::validateValueIsBoolean);
+    private void createValidators(ConfigValidationFunction[] validationFunctions) {
+        List<ConfigValidationFunction> validators = new ArrayList<>();
+        validators.add(this::validateValueIsBoolean);
+        if (null != validationFunctions) {
+            validators.addAll(Arrays.asList(validationFunctions));
         }
-        return validate(fieldValueModel, fieldModel, validationFunctions);
+        this.setValidationFunctions(validators.stream().collect(Collectors.toUnmodifiableList()));
     }
 
-    private Collection<String> validateValueIsBoolean(final FieldValueModel fieldToValidate, final FieldModel fieldModel) {
+    private Collection<String> validateValueIsBoolean(FieldValueModel fieldToValidate, FieldModel fieldModel) {
         if (fieldToValidate.hasValues()) {
             final String value = fieldToValidate.getValue().orElse("");
             final boolean trueTextPresent = Boolean.TRUE.toString().equalsIgnoreCase(value);
